Compiler tests